2006-08-28  Tommi Komulainen  <tommi.komulainen@nokia.com>

	* gtk/gtktreeview.c (selection_changed): Don't grab focus to treeview
	on selection change as it makes no sense.
	* gtk/gtktreeview.c (check_if_can_focus): Remove forcefully setting
	the cursor row to avoid fighting for the selection.

2006-08-24  Kristian Rietveld  <kris@imendio.com>

	* gtk/gtkcombobox.c (gtk_combo_box_popup): move set_cursor
	after realization of the popup window, so clamp node doesn't fail.
	(#346616, Tommi Komulainen).
	NB#34004

2006-08-23  Kristian Rietveld  <kris@imendio.com>

	* gtk/gtktreeview.c (gtk_tree_view_grab_notify): process queued
	select row if valid to get the selection up to date.
	NB#33601.

2006-08-23  Tommi Komulainen  <tommi.komulainen@nokia.com>

	* gtk/gtkcombobox.c (gtk_combo_box_add, gtk_combo_box_remove,
	gtk_combo_box_menu_setup, gtk_combo_box_list_setup): Propagate
	'insensitive-press' signal from (internal) child widgets.
	NB#31719

2006-08-23  Tommi Komulainen  <tommi.komulainen@nokia.com>

	* gtk/gtktreeview.c (gtk_tree_view_button_release): Emit
	'row-activated' consistently with stylus and keyboard; only once, for
	the focused row.
	* gtk/gtktreeview.c (activate_callback): Removed as unneeded
	NB#29343

2006-08-21  Tommi Komulainen  <tommi.komulainen@nokia.com>

	* gdk/x11/gdkwindow-x11.c (gdk_window_get_type_hint): cast the
	return value of XGetWindowProperty() correctly so we don't return
	garbage type hints. Thanks to Pengcheng Zou for the patch.
	MB#724 

2006-07-20  Tommi Komulainen  <tommi.komulainen@nokia.com>
	
	* configure.in: Make the tests for RANDR and SYNC extensions more
	robust.

2006-07-20  Tommi Komulainen  <tommi.komulainen@nokia.com>
	
	Taken from GNOME. M#707

    2006-03-05  Matthias Clasen  <mclasen@redhat.com>

	Fix handling of image-only buttons.  (#332985, Kalle
	Vahlmann, #333555)

	* gtk/gtkbutton.c (gtk_button_construct_child): Don't
	return early if there an image to show.